Replace JRebel with HotSwapAgent